--- a/admin/index.html
+++ b/admin/index.html
@@ -1,10 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>Content Manager</title>
+    <meta charset="utf-8">
+    <title>Content Manager</title>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+    <div id="pages-cms"></div>
+    <script src="https://unpkg.com/pages-cms@latest"></script>
+    <script>
+        PagesCMS.init({
+            settings: {
+                github: {
+                    repo: 'WorstGen/futures-bright',
+                    branch: 'gh-branch'
+                }
+            },
+            collections: [{
+                name: 'articles',
+                label: 'Articles',
+                folder: '_posts',
+                fields: [
+                    {name: 'title', label: 'Title', widget: 'string'},
+                    {name: 'category', label: 'Category', widget: 'string'},
+                    {name: 'date', label: 'Date', widget: 'datetime'},
+                    {name: 'author', label: 'Author', widget: 'string', default: 'Editor'},
+                    {name: 'excerpt', label: 'Excerpt', widget: 'text'},
+                    {name: 'body', label: 'Body', widget: 'markdown'}
+                ]
+            }]
+        });
+    </script>
 </body>
 </html>
